@@ -75,3 +75,4 @@ Gwanglim Lee <gl77.lee@samsung.com> <gwanglim@gmail.com>
 JaeHyun Jo <jae_hyun_cho@naver.com>
 Bora Hwang <bora1.hwang@samsung.com>
 Jiyoung Choi <jychoi7.choi@samsung.com>
+Arvind R <arvino55@gmail.com>
